tests/codegen/fail/interface/struct/attr_name_double_underscored.rs
use juniper::graphql_interface;

#[graphql_interface]
struct __Character {
    id: String,
}

fn main() {}
